# myprojects

Doctor/: CMakeLists.txt  File.cpp  File.h  Server.cpp  Server.h  VieoModel.cpp  VieoModel.h  main.cpp  main.qml
adhd/: CMakeLists.txt  Client.cpp  Client.h  Recurces.qrc  Viewmodel.cpp  Viewmodel.h  cppgenerator.cpp  cppgenerator.h  main.cpp  main.qml  recurce.qrc
